<resources>
    <string name="app_name">Audio City Tour Guide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search</string>
    <string name="search_title">Search Title</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="pwd">Password</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="btnRegister">Register</string>
    <string name="refreshing">Refreshing</string>
    <string name="please_wait">Please wait</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

</resources>
